
CREATE TABLE IF NOT EXISTS USERS 
(
USERNAME VARCHAR(30) PRIMARY KEY, 
P_HASH CHAR(32) NOT NULL
);

CREATE TABLE IF NOT EXISTS RECIPES(
    ID INTEGER PRIMARY KEY,
    AUTHOR VARCHAR(30),
    RECIPE_NAME VARCHAR(30),
    RECIPE_DESCRIPTION TEXT,
    RECIPE_BODY TEXT
);

CREATE TABLE IF NOT EXISTS INGREDIANTS(
    INGREDIANT_ID INTEGER PRIMARY KEY,
    INGREDIANT_NAME VARCHAR(30)
);

CREATE TABLE IF NOT EXISTS RECIPE_INGREDIANTS(
    RECIPE_ID INTEGER NOT NULL,
    INGREDIANT_ID INTEGER NOT NULL,
    PRIMARY KEY(RECIPE_ID, INGREDIANT_ID)
);

CREATE TABLE IF NOT EXISTS COUNTERS(
    FIELD_NAME VARCHAR(20) PRIMARY KEY,
    FIELD_VALUE INTEGER
);