@startuml

entity USERS {
    * USERNAME VARCHAR(30)
    P_HASH CHAR(32)
}

entity RECIPES{
    * ID INTEGER
    AUTHOR VARCHAR(30) FK
    RECIPE_NAME VARCHAR(30)
    RECIPE_DESCRIPTION STRING
    RECIPE_BODY STRING
}

entity RECIPE_INGREDIANTS{
 * RECIPE_ID INTEGER FK
 * INGREDIANT_ID INTERGER FK
}

entity INGREDIANTS{
    * INGREDIANT_ID INTEGER
    NAME STRING
}

entity COUNTERS{
    * FILED_NAME VARCHAR(20)
    FIELD_VALUE INTEGER
}

USERS ||--|{ RECIPES
RECIPES }|--|{ INGREDIANTS
RECIPES ||--|{ RECIPE_INGREDIANTS
INGREDIANTS ||--|{ RECIPE_INGREDIANTS

@enduml